delombok + migrate back to java 8 + .repl