@@ -1,6 +1,8 @@
 package com.zhivaevartem.siliciumbot.constant;
 
 import com.zhivaevartem.siliciumbot.module.readycheck.ReadyCheckConfigGuildEntity.ReadyCheckOption;
+
+import java.util.Arrays;
 import java.util.List;
 
 /**
@@ -10,11 +12,11 @@ public class StringConstants {
   public static final String DEFAULT_BOT_COMMAND_PREFIX = "D";
 
   public static final List<ReadyCheckOption> DEFAULT_READY_CHECK_OPTIONS
-      = List.of(new ReadyCheckOption[] {
+      = Arrays.asList(
         new ReadyCheckOption("✅", "Ready"),
         new ReadyCheckOption("⌚", "Later"),
         new ReadyCheckOption("❌", "Not ready")
-      });
+      );
 
   public static final String EMPTY_READY_CHECK_VALUE = "*No votes...*";
 
