@@ -3,15 +3,27 @@ package com.zhivaevartem.siliciumbot.module.music;
 import com.zhivaevartem.siliciumbot.core.listener.AbstractEventListener;
 import com.zhivaevartem.siliciumbot.core.listener.CommandHandler;
 import com.zhivaevartem.siliciumbot.core.service.MessageService;
+import discord4j.core.GatewayDiscordClient;
 import discord4j.core.event.domain.VoiceStateUpdateEvent;
+import discord4j.core.event.domain.guild.MemberJoinEvent;
+import discord4j.core.event.domain.lifecycle.DisconnectEvent;
 import discord4j.core.event.domain.message.MessageCreateEvent;
+import discord4j.core.object.VoiceState;
+import discord4j.core.object.entity.channel.VoiceChannel;
+import java.util.List;
+import java.util.stream.Collectors;
+
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
+import reactor.core.publisher.Mono;
 
 @Component
 public class MusicListener extends AbstractEventListener {
   @Autowired
   private MusicService musicService;
+
+  @Autowired
+  private GatewayDiscordClient gateway;
 
   @Autowired
   private MessageService messageService;
@@ -21,7 +33,7 @@ public class MusicListener extends AbstractEventListener {
     this.musicService.playTrack(event, query)
       .flatMap(musicTrackResponses -> {
         String message = String.join("\n",
-            musicTrackResponses.stream().map(MusicTrackResponse::getMessage).toList());
+          musicTrackResponses.stream().map(MusicTrackResponse::getMessage).collect(Collectors.toList()));
         return this.messageService.replyMessage(event.getMessage(), message);
       }).subscribe();
   }
@@ -63,7 +75,7 @@ public class MusicListener extends AbstractEventListener {
       .flatMap(tracks -> {
         String message = "Queue is empty";
         if (!tracks.isEmpty()) {
-          message = String.join("\n", tracks.stream().map(MusicTrack::getName).toList());
+          message = String.join("\n", tracks.stream().map(MusicTrack::getName).collect(Collectors.toList()));
         }
         return this.messageService.replyMessage(event.getMessage(), message);
       }).subscribe();
@@ -76,10 +88,26 @@ public class MusicListener extends AbstractEventListener {
   }
 
   @Override
-  public void onVoiceStateUpdateEvent(VoiceStateUpdateEvent event) {
+  public void onVoiceStateUpdateEvent(final VoiceStateUpdateEvent event) {
     if (event.isLeaveEvent()) {
-      String guildId = event.getCurrent().getGuildId().asString();
-      this.musicService.onDisconnect(guildId);
+      this.gateway.getSelfMember(event.getOld().get().getGuildId())
+        .flatMap(member -> member.getVoiceState())
+        .flatMap(state -> {
+          if (state == null) {
+            String guildId = event.getCurrent().getGuildId().asString();
+            this.musicService.onDisconnect(guildId);
+            return Mono.empty();
+          }
+          return state.getChannel();
+        })
+        .flatMap(channel -> channel.getVoiceStates().collectList())
+        .flatMap(states -> states.size() == 1 ? Mono.just(states.get(0)) : Mono.empty())
+        .flatMap(state -> state.getMember())
+        .subscribe(member -> {
+          if (member.getId().equals(this.gateway.getSelfId())) {
+            this.musicService.disconnect(member.getGuildId().asString()).subscribe();
+          }
+        });
     }
   }
 }
